fix: Fixed page overflow that used to bring unnecessary scrollbar
The content of the page would overflow both in desktop and mobile screens, making an unnecessary scrollbar show up.

--- a/src/components/Chat/index.css
+++ b/src/components/Chat/index.css
@@ -58,3 +58,8 @@
 	color: var(--text-secondary);
 }
 
+@media (max-height: 768px) {
+	.messages-wrapper {
+		height: 100%;
+	}
+}
