--- a/src/components/Sidebar/index.css
+++ b/src/components/Sidebar/index.css
@@ -12,7 +12,7 @@ aside {
 	grid-area: sidebar;
 	width: 100%;
 	max-width: 100%;
-	height: 100vh;
+	max-height: 100%;
 	overflow-x: hidden;
 	overflow-y: scroll;
 	background-color: var(--background-secondary);
