--- a/src/index.css
+++ b/src/index.css
@@ -26,9 +26,9 @@ html, body {
 		"topbar topbar"
 		"sidebar chat"
 	;
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
-	max-height: 100vh;
+	max-height: 100%;
 	overflow-x: hidden;
 }
 
